--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "design knitting patterns for top of hats",
   "main": "app.js",
   "scripts": {
-    "start": "electro app.js"
+    "start": "npm run build:css && electro app.js",
+    "build": "browserify app.js | indexhtmlify > index.html",
+    "build:css": "node buildStyles.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +29,9 @@
     "vanilla-picker": "^2.4.3"
   },
   "devDependencies": {
+    "browserify": "^16.2.2",
     "electro": "^2.1.1",
-    "electron": "^2.0.9"
+    "electron": "^2.0.9",
+    "indexhtmlify": "^1.3.1"
   }
 }
